# bot

./: .coveragerc  .deepsource.toml  .dockerignore  .env  .env.default  .env.server.default  .flake8  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .snekrc  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.base  Just-practising-in-forking  LICENSE  LICENSE-THIRD-PARTY  Pipfile  README.md  REAadme.md  SECURITY.md  Vagrantfile  azure-pipelines.yml  bootstrap_config.py  botstrap.py  config-default.yml  config-example.yml  config.yml  deploy.py  deployment.yaml  docker-compose.yml  extract_metrics_after_codecarbon.py  extract_metrics_after_pylint.py  extract_metrics_after_pytest.py  extract_metrics_after_radon.py  extract_metrics_before_codecarbon.py  extract_metrics_before_pylint.py  (+12 more)
.devcontainer/: Dockerfile  apt-packages  pip-packages  project-setup.sh  python-versions  setup-debian.sh
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  dependabot.yml  review-policy.yml
.github/ISSUE_TEMPLATE/: tag-suggestion.yml
.github/workflows/: block-fixup-commits.yaml  build-deploy.yml  build.yml  codeql-analysis.yml  deploy.yml  lint-test-build.yml  lint-test-deploy.yml  lint-test.yml  main.yml  pythonapp.yml  sentry_release.yml  status_embed.yaml
bot/: __init__.py  __main__.py  api.py  async_stats.py  bot.py  command.py  constants.py  converters.py  decorators.py  errors.py  exceptions.py  formatter.py  helper_questions.py  interpreter.py  log.py  monkey_patches.py  pagination.py  seasons.py  typing.py  utils.py
bot/cogs/: alias.py  allow_deny_lists.py  antimalware.py  antispam.py  base.tex  bigbrother.py  bot.py  clean.py  clickup.py  code_snippets.py  cogs.py  config_verifier.py  defcon.py  deployment.py  dm_relay.py  doc.py  docs.py  duck_pond.py  error_handler.py  eval.py  events.py  extensions.py  filter_lists.py  filtering.py  formatter.py  free.py  fun.py  help.py  help_channels.py  hiphopify.py  information.py  infractions.py  jams.py  logging.py  math.py  metrics.py  moderation.py  modlog.py  news.py  nominations.py  (+31 more)
bot/cogs/codeblock/: __init__.py  cog.py  instructions.py  parsing.py
bot/cogs/doc/: __init__.py  cache.py  cog.py  inventory_parser.py  markdown.py  parser.py  parsing.py
bot/cogs/filters/: antispam.py  filtering.py  token_remover.py
bot/cogs/moderation/: __init__.py  defcon.py  incidents.py  infractions.py  management.py  modlog.py  scheduler.py  silence.py  superstarify.py  utils.py  verification.py
bot/cogs/superstarify/: __init__.py  stars.py
bot/cogs/sync/: __init__.py  cog.py  syncers.py
bot/cogs/utils/: bot.py  clean.py  extensions.py
bot/cogs/watchchannels/: __init__.py  bigbrother.py  talentpool.py  watchchannel.py
bot/exts/: alias.py  help_channels.py
bot/exts/backend/: branding.py  config_verifier.py  error_handler.py  logging.py
bot/exts/filtering/: FILTERS-DEVELOPMENT.md  _filter_context.py  _image_hash.py  _loaded_types.py  _settings.py  _ui.py  _utils.py  filtering.py
bot/exts/filters/: antimalware.py  antispam.py  filter_lists.py  filtering.py  security.py  (+3 more)
bot/mixins/: __init__.py  redis.py
bot/patches/: __init__.py  message_edited_at.py
bot/resources/: elements.json  foods.json  stars.json
bot/rules/: __init__.py  attachments.py  burst.py  burst_shared.py  chars.py  discord_emojis.py  duplicates.py  everyone_ping.py  links.py  mentions.py  newlines.py  role_mentions.py
bot/utils/: __init__.py  cache.py  caching.py  channel.py  checks.py  context.py  extensions.py  function.py  helpers.py  lock.py  members.py  message_cache.py  messages.py  moderation.py  modlog.py  persistent_scheduling.py  redis.py  redis_cache.py  redis_dict.py  regex.py  retry.py  scheduling.py  service_discovery.py  services.py  spam_check.py  startup_reporting.py  tags.py  time.py  users.py  webhooks.py
docker/: Dockerfile  Dockerfile.base  base.Dockerfile  bot.Dockerfile  ci.Dockerfile
docs/: README.md  report.md
docs/bot/: api.md  constants.md  converters.md  decorators.md  index.md  interpreter.md  pagination.md
metrics-after-codecarbon/: emissions_depois.csv
metrics-after-pylint/: pylint_arquivos_criticos_depois.json  pylint_convention_depois.json  pylint_depois.json  pylint_distribuicao_categorias_depois.json  pylint_error_depois.json  pylint_ranking_smells_depois.json  pylint_refactor_depois.json  pylint_score_depois.txt  pylint_warning_depois.json
metrics-after-pytest/: pytest_depois.html  pytest_depois.xml
metrics-after-radon/: cc_depois.json  cc_por_arquivo_depois.csv  cc_por_funcao_depois.csv  hal_depois.json  hal_por_arquivo_depois.csv  hal_por_funcao_depois.csv  mi_depois.json  mi_por_arquivo_depois.csv  raw_depois.json  raw_por_arquivo_e_total_depois.csv
metrics-before-codecarbon/: emissions_antes.csv
metrics-before-pylint/: pylint_antes.json  pylint_arquivos_criticos_antes.json  pylint_convention_antes.json  pylint_distribuicao_categorias_antes.json  pylint_error_antes.json  pylint_ranking_smells_antes.json  pylint_refactor_antes.json  pylint_score_antes.txt  pylint_warning_antes.json
metrics-before-pytest/: coverage_antes.json  coverage_antes.xml  pytest_antes.html  pytest_antes.xml
metrics-before-radon/: cc_antes.json  cc_por_arquivo_antes.csv  cc_por_funcao_antes.csv  hal_antes.json  hal_por_arquivo_antes.csv  hal_por_funcao_antes.csv  mi_antes.json  mi_por_arquivo_antes.csv  raw_antes.json  raw_por_arquivo_e_total_antes.csv
scripts/: deploy-azure.sh  deploy.py  deploy.sh  vagrant_bootstrap.sh
tests/: README.md  __init__.py  _autospec.py  base.py  conftest.py  helpers.py  test_api.py  test_base.py  test_constants.py  test_converters.py  test_helpers.py  test_pagination.py  test_resources.py
tests/bot/: .testenv  test_api.py  test_constants.py  test_converters.py  test_decorators.py  test_pagination.py  test_utils.py
tests/cogs/: test_antispam.py  test_information.py  test_security.py  test_token_remover.py
tests/rules/: test_attachments.py
tests/utils/: test_checks.py  test_time.py
wheels/: regex-2019.8.19-cp37-cp37m-linux_x86_64.whl
(+475 files in other folders)
